# cmake-cookbook

./: CMakeLists.txt  main.cpp
include/: Message.cpp  Message.h  swap.h  utils.h
src/: hello-world.cpp  swap.cpp
